==> iotexproject/ioConnect/pal/Nordic/Sprout/sprout.c <==
#include <string.h>
#include <stdlib.h>
#include <zephyr/kernel.h>
#include <zephyr/logging/log.h>
#include <zephyr/logging/log_ctrl.h>
#include <zephyr/net/socket.h>
#include <zephyr/net/http/client.h>
#include <zephyr/net/net_if.h>
#include <zephyr/net/tls_credentials.h>
#include "include/jose/jose.h"
#include "include/dids/dids.h"
#include "sprout.h"

void _pal_sprout_http_response_parse(struct k_work *item)
{
    if (false == _sprout_ctx.hasFinish)
        return;

    if (NULL == _sprout_ctx._replyData)
        return;

    switch (_sprout_ctx.type) {
        case IOTEX_PAL_SPROUT_CTX_TYPE_SERVER_DIDDOC:

            _pal_sprout_diddoc_handle(_sprout_ctx._replyData);
        
            break;
        case IOTEX_PAL_SPROUT_CTX_TYPE_REQUEST_TOKEN:
            
             _pal_sprout_token_handle(_sprout_ctx._replyData);

            break;
        case IOTEX_PAL_SPROUT_CTX_TYPE_SEND_MESSAGE:
            
            _pal_sprout_send_messge_handle(_sprout_ctx._replyData);

            break;
        case IOTEX_PAL_SPROUT_CTX_TYPE_QUERY_STATUS:

            _pal_sprout_query_handle(_sprout_ctx._replyData);

            break;                                
        default:
            break;
    }

    _pal_sprout_ctx_deinit();

    k_mutex_unlock(&_sprout_ctx._sprout_mutex);

    return;
}

int iotex_pal_sprout_server_diddoc_get(void)
{
    if (_err_times >= IOTEX_PAL_SPROUT_ERROR_TIMES_MAX)
        return IOTEX_SPROUT_ERR_BAD_STATUS;

    if (-1 == _sock)
        return IOTEX_SPROUT_ERR_BAD_STATUS;

    LOG_INF("Starting to get DIDDoc of Server");

    _pal_sprout_ctx_deinit();
    _sprout_ctx.type = IOTEX_PAL_SPROUT_CTX_TYPE_SERVER_DIDDOC;        

	struct http_request req = {0};

    req.method          = HTTP_GET;
    req.host            = IOTEX_SPROUT_HTTP_HOST;
    req.url             = IOTEX_SPROUT_HTTP_PATH_GET_DIDDOC;
    req.protocol        = "HTTP/1.1";
    req.response        = _response_cb;
    req.recv_buf        = _replyData;
    req.recv_buf_len    = sizeof(_replyData);

    memset(_replyData, 0, sizeof(_replyData));

    http_client_req(_sock, &req, IOTEX_SPROUT_HTTP_TIMEOUT, "GET_DIDDoc");
	
    return 0;
}

int iotex_pal_sprout_send_message(char *message)
{
    if (_err_times >= IOTEX_PAL_SPROUT_ERROR_TIMES_MAX)
        return IOTEX_SPROUT_ERR_BAD_STATUS;

    if (-1 == _sock)
        return IOTEX_SPROUT_ERR_BAD_STATUS;
    
    if (NULL == _deviceDID || NULL == _deviceKAKID)
        return IOTEX_SPROUT_ERR_BAD_STATUS + 10;

    if (NULL == message)
        return IOTEX_SPROUT_ERR_BAD_STATUS + 11;
    
    if (0 == _didcommToken[0])
        return IOTEX_SPROUT_ERR_BAD_STATUS + 12;

    LOG_INF("Starting to send message");

    _pal_sprout_ctx_deinit();
    _sprout_ctx.type = IOTEX_PAL_SPROUT_CTX_TYPE_SEND_MESSAGE;    

	struct http_request req = {0};

    req.method          = HTTP_POST;
    req.url             = IOTEX_SPROUT_HTTP_PATH_MESSAGE;
    req.host            = IOTEX_SPROUT_HTTP_HOST;
    req.port            = IOTEX_SPROUT_HTTP_PORT_STRING;
    req.protocol        = "HTTP/1.1";
    req.response        = _response_cb;
    req.recv_buf        = _replyData;
    req.recv_buf_len    = sizeof(_replyData);

    req.payload         = message;
    req.payload_len     = strlen(message);

    req.header_fields = (const char **)_headers;

    int ret = http_client_req(_sock, &req, IOTEX_SPROUT_HTTP_TIMEOUT, "Send_Message");        
    if (ret < 0) {
        LOG_ERR("http_client_req (%d)", ret);
        return ret;
    }

    return IOTEX_SPROUT_ERR_SUCCESS;
}

int iotex_pal_sprout_msg_query(char *message_id)
{
    char message_path[IOTEX_PAL_SPROUT_MESSAGE_ID_MAX_SIZE] = {0};

    if (_err_times >= IOTEX_PAL_SPROUT_ERROR_TIMES_MAX)
        return IOTEX_SPROUT_ERR_BAD_STATUS;

    if (-1 == _sock)
        return IOTEX_SPROUT_ERR_BAD_STATUS;
    
    if (NULL == _deviceDID || NULL == _deviceKAKID)
        return IOTEX_SPROUT_ERR_BAD_STATUS;

    if (NULL == message_id && 0 == _messageID[0])
        return IOTEX_SPROUT_ERR_BAD_STATUS;             
    
    if (0 == _didcommToken[0])
        return IOTEX_SPROUT_ERR_BAD_STATUS;        

    memcpy(message_path, IOTEX_SPROUT_HTTP_MESSAGE_QUERY_PATH_HEAD, strlen(IOTEX_SPROUT_HTTP_MESSAGE_QUERY_PATH_HEAD));
    if (message_id)        
        memcpy(message_path + strlen(IOTEX_SPROUT_HTTP_MESSAGE_QUERY_PATH_HEAD), message_id, strlen(message_id));
    else
        memcpy(message_path + strlen(IOTEX_SPROUT_HTTP_MESSAGE_QUERY_PATH_HEAD), _messageID, strlen(_messageID));
	
    _pal_sprout_ctx_deinit();
    _sprout_ctx.type = IOTEX_PAL_SPROUT_CTX_TYPE_QUERY_STATUS; 

	struct http_request req = {0};

    req.method          = HTTP_GET;
    req.url             = message_path;
    req.host            = IOTEX_SPROUT_HTTP_HOST;
    req.port            = IOTEX_SPROUT_HTTP_PORT_STRING;
    req.protocol        = "HTTP/1.1";
    req.response        = _response_cb;
    req.recv_buf        = _replyData;
    req.recv_buf_len    = sizeof(_replyData);

    req.header_fields = (const char **)_headers;

    http_client_req(_sock, &req, IOTEX_SPROUT_HTTP_TIMEOUT, "Query");

    return IOTEX_SPROUT_ERR_SUCCESS;
}
